# summarizer-api

./: .editorconfig  .env.backup  .gitignore  DOCKER.md  Docker-README.md  Dockerfile.api  Dockerfile.ollama  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  openapi.yaml  prometheus.yml  pyproject.toml  pytest.ini
app/: __init__.py  api.py  constants.py  crud.py  db.py  errors.py  extraction.py  logging_conf.py  main.py  metrics.py  middleware.py  models.py  ollama_client.py  progress.py  redis_progress.py  schemas.py  settings.py  tasks.py
migrations/: env.py
migrations/versions/: 001_initial.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: summarizer-api.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: docker-hub.sh  export_openapi.sh  init-db.sql  run_tests.sh  validate_schema.py
tests/: README.md  conftest.py  test_api.py  test_api_core.py
